# bevy_game_template

./: Cargo.toml  README.md
crates/asset_loading/: Cargo.toml
crates/asset_loading/src/: lib.rs
crates/game/: Cargo.toml
crates/game/src/: lib.rs
crates/state/: Cargo.toml
crates/state/src/: lib.rs
crates/window/: Cargo.toml
crates/window/src/: lib.rs
src/: main.rs
